--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/Makefile.am: $(builddir) is not defined, replace by `.'.
+
 2005-03-08  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* m4/libtool.m4 (_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG)
