* tests/Makefile (clean-local): Only run the testsuite cleanup if the testsuite has been generated.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-11  Per Bothner  <per@bothner.com>  (tiny change)
+
+	* tests/Makefile (clean-local): Only run the testsuite cleanup
+	if the testsuite has been generated.
+
 2005-03-10  Gary V. Vaughan  <gary@gnu.org>
 
 	* libltdl/Makefile.am (install-data-local): Don't force v7 tar
