* bootstrap: really remove bogus files Makefile tests/Makefile.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-03-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* bootstrap: really remove bogus files Makefile tests/Makefile.
+
 	* doc/libtool.texi: Replace wicked whiches by thats or other
 	better-sounding constructs.
 
