--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ New in 2.1b: 2005-??-??; CVS version 2.1a, Libtool team:
 * Shell optimizations which break use of the stdin file descriptor in libtool.
 * `libtoolize --install' now also installs `install-sh'.
 * Support (mostly) for DragonFly BSD.
+* Allow shell special characters like `$' in source file names, but not
+  in object names, to enhance GCJ support.
 
 New in 1.9h: 2004-??-??; CVS version 1.9g, Libtool team:
 * Libtool versions can now be parallel installed, except that only one
