--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ New in 1.9h: 2004-??-??; CVS version 1.9g, Libtool team:
 * Support for linux-dietlibc (`diet' as well as `diet-dyn', separately).
 * `libtoolize --install' now also installs `install-sh'.
 * Support (mostly) for DragonFly BSD.
+* Allow shell special characters like `$' in source file names, but not
+  in object names, to enhance GCJ support.
 
 New in 1.9f: 2004-10-23; CVS version 1.9e, Libtool team:
 * Calculate dllsearchpath correctly for wrapper scripts on cygwin.
