--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* m4/libtool.m4 (_LT_LINKER_SHLIBS) [linux]: Remove MAIN_
+	dependency when creating shared libraries with Portland pgf77.
+
 2005-03-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* configure.ac: stamp-vcl is in $top_srcdir, not $top_builddir.
