--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2005-03-15  Per Bothner <per@bothner.com>,
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Allow special characters in source file names.  Will break unless
+	`-o target' is also given, which must not contain special characters.
+	En passant, fix source file quoting broken for cygwin/MSVC.
+
+	* ltmain.in (compile mode): Use new variable qsrcfile
+	for quoted source file name for compile $command.  Fix missing
+	quotes for _c_o lockfile.
+	* NEWS: Update.
+
 2005-03-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS) [linux]: Remove MAIN_
