* config/general.m4sh: unconditionally set IFS, and set it to the one true right sequence: space, tab, newline. * m4/libtool.m4: remove IFS setting and as_* namespace infringement.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-03-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* config/general.m4sh: unconditionally set IFS, and set it
+	to the one true right sequence: space, tab, newline.
+	* m4/libtool.m4: remove IFS setting and as_* namespace infringement.
+
 	* m4/libtool.m4 (_LT_CONFIG): Reset IFS to fix failure with ash.
 
 	* configure.ac, libltdl/configure.ac: s/##/dnl/ for comments
