--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-03-18  Peter O'Gorman  <peter@pogma.com>,
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libtool.m4: The compiler can be a program name with args, so
+	always check cc_basename against compiler name and a wildcard.
+	Also, drop unnecessary quotes in `case' argument.
+
 2005-03-18  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* libtool.m4 (AC_LIBTOOL_LANG_CXX_CONFIG) [ solaris2.6+ ]:
