--- a/THANKS
+++ b/THANKS
@@ -90,6 +90,7 @@
   Patrick Welche		prlw1@newn.cam.ac.uk
   Paul Eggert			eggert@twinsun.com
   Peter Eisentraut		peter_e@gmx.net
+  Peter Ekberg			peda@lysator.liu.se
   Rainer Orth			ro@TechFak.Uni-Bielefeld.DE
   Sebastian Wilhelmi		wilhelmi@ira.uka.de
   Stephan Kulow			coolo@kde.org
