--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* TODO: Update.
+
 2005-03-20  Peter Ekberg  <peda@lysator.liu.se>
 
 	* m4/libtool.m4 (_LT_LINKER_SHLIBS) [ irix5, irix6, nonstopux ]:
