--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-03-24  Gary V. Vaughan  <gary@gnu.org>
 
+	* libtoolize.m4sh: For verbose mode, explain why macro files are
+	not installed without an AC_CONFIG_MACRO_DIR declaration.
+
+2005-03-24  Gary V. Vaughan  <gary@gnu.org>
+
 	As a prerequisite for being able to test an uninstalled libtoolize
 	for copying files correctly from the source tree, we must know
 	exactly which files should be copied by the --ltdl option to avoid
